main/components/IconSection/index.styl
_gray = #dddddd
_darkGray = #636363

.root
  align-items center

.title
  font-size font(xxl)
  font-weight 200
  color _darkGray

.titleWrapper
  align-items center

.content
  align-items center

.section
  align-items center
  margin-bottom gutter(l)

.iconBorderWrapper
  padding gutter(s)
  border 1px solid _gray
  border-radius 100px
  margin-bottom gutter(l)

.iconWrapper
  border-radius 100px
  border 1px solid _gray
  padding gutter(xl)

.itemText
  text-align center
  font-weight 200
  font-size font(l)
  line-height 25px

.itemTitle
  text-align center
  font-weight 200
  font-size font(xl)
  margin-bottom gutter(l)

